# tuthanservo_LittleDaisiesMKII_ME462

./: README.md
CameraSide_Trials/: camera_deneme.py  camera_detection.py
GripperDetection/: gripper_detection_v1.py  gripper_detection_v2.py
MicrocontrollerSide_Trials/: FSR_ispressed.py  FSR_test.py  GripperControl_Test_FSR.py  GripperControl_Tester_manuel.py  GripperControl_Tester_manuel_v2_final.py  gripper_fsr_test_final.py  gripper_test.py  microservo.py  servoDeneme.py
tuthanservo_project/tuthanservo_project_v1/: .gitignore  README.md  pico_requirements.txt
tuthanservo_project/tuthanservo_project_v1/pico/: gripper_controller.py  main.py
tuthanservo_project/tuthanservo_project_v2/: upload_to_pico.sh
tuthanservo_project/tuthanservo_project_v2/pico/: fsr.py  secrets.py  servo_controller.py
tuthanservo_project/tuthanservo_project_v2/raspberry_pi/: gripper_client.py
tuthanservo_project/tuthanservo_project_v3/mosquitto/: gripper.conf
tuthanservo_project/tuthanservo_project_v3/pico/: config.py  fsr.py  install_dependencies.py  wifi_manager.py
tuthanservo_project/tuthanservo_project_v3/raspberry_pi/: gripper_client.py
tuthanservo_project/tuthanservo_project_v4/: README.md  check_system.sh  requirements.txt  run_gripper.sh  setup_host.sh
tuthanservo_project/tuthanservo_project_v4/ros2/gripper_mqtt_bridge/: README.md  package.xml  setup.cfg  setup.py
tuthanservo_project/tuthanservo_project_v4/ros2/gripper_mqtt_bridge/gripper_mqtt_bridge/: node.py
ups_module_trial_codes_microcontroller/: 2f_85_gripper.py  i2c_ups_module.py
(+3 files in other folders)
