<?xml version="1.0"?>
<package format="3">
  <name>gripper_mqtt_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 to MQTT bridge for the Pico W gripper.</description>

  <maintainer email="maintainer@example.com">Project Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
